@@ -34,7 +34,7 @@ no_indium_version = 1.0.2+1.18.2
 registrate_version = MC1.18.2-1.1.6
 forge_tags_version = 2.1
 milk_lib_version = 0.3.2
-port_lib_version = 1.2.721-beta
+port_lib_version = 1.2.730-beta
 
 night_config_core_version = 3.6.3
 night_config_toml_version = 3.6.3
