@@ -5,7 +5,8 @@ No formatting, just plain text. CurseForge support for it is terrible.
 
 Change logging starts below:
 ----------
-- Synced with Patches G, H, and I
+- synced with Patches G, H, and I
 - added easy publishing to Modrinth, CurseForge, GitHub Releases, and Maven through a GitHub Action.
 - added easy change logging. Future change logs will be much more thorough.
 - updated AE2 compat recipes
+- fixed error when using mechanical crafters with an empty hand
